with_traefik/ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # HTTP (websecure para HTTPS)
spec:
  rules:
    - host: "titiler.local" # Cambia esto por tu dominio o IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-for-ingress # Nombre de tu Service en Kubernetes
                port:
                  number: 80 # Puerto del Service
